chore: fix section gap for fundamentals

--- a/src/page-components/collections/framework-field-guide/components/shared-section-styling.scss
+++ b/src/page-components/collections/framework-field-guide/components/shared-section-styling.scss
@@ -63,6 +63,10 @@
     }
 }
 
+.section-metric-text {
+    margin: 0;
+}
+
 .text-style-main-text-only, .section-metric-asterisk {
     background: var(--text-gradient);
     -webkit-background-clip: text;
@@ -84,4 +88,8 @@
     position: absolute;
     left: 100%;
     top: calc(0px - var(--spc-1x));
+}
+
+.section-chip-group-container {
+    margin: var(--section-gap) auto;
 }
